--- a/notebooks/02_regression_ic50.ipynb
+++ b/notebooks/02_regression_ic50.ipynb
@@ -1567,6 +1567,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "vCkkZrgAdtNU",
         "outputId": "8734efb5-4665-4981-fef8-e0a1630ea880"
       },
